--- a/src/styles/DashboardNavbar.css
+++ b/src/styles/DashboardNavbar.css
@@ -87,3 +87,19 @@
     display: flex;
   }
 }
+.notification-icon {
+  position: relative;
+}
+
+.badge-dot {
+  position: absolute;
+  top: -6px;
+  right: -10px;
+  background-color: red;
+  color: white;
+  font-size: 11px;
+  padding: 2px 6px;
+  border-radius: 50%;
+  font-weight: bold;
+  line-height: 1;
+}
