--- a/src/styles/ItemDetail.css
+++ b/src/styles/ItemDetail.css
@@ -42,8 +42,9 @@
 .image-section img {
   width: 100%;
   height: auto;
+  max-height: 30vh !important;
   max-height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 12px;
 }
 
@@ -140,6 +141,12 @@
     height: auto;
   }
 }
+@media (max-width: 690px) {
+  .image-section img {
+    /* min-height: 20vh; */
+    margin: 10px;
+  }
+}
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -211,4 +218,15 @@
   padding: 10px 15px;
   border-radius: 10px;
   margin-top: 12px;
+}
+/* In your CSS file (e.g. ItemDetail.css or global.css) */
+.clickable-link {
+  color: #007bff;
+  cursor: pointer;
+  text-decoration: underline;
+  font-weight: 500;
+}
+
+.clickable-link:hover {
+  color: #0056b3;
 }
